tests/negative/neg_pr222_projected_global_output_function.safe
-- Test: neg_pr222_projected_global_output_function
-- Description: Result-returning functions must not mutate package globals through mut actuals.
-- Expected: REJECT

counter : integer = 0

function set_value (item : mut integer)
   item = 3

function bump returns integer
   set_value (counter)
   return counter

print (bump ())
